/**
 * This file is auto generated by tto v0.4.5 !
 * If you want to modify this code, please read the guide 
 * to modify code template.
 *
 * Get started: https://github.com/ixre/tto
 *
 * Copyright (C) 2021 <no value>, All rights reserved.
 *
 * name : template_service.proto
 * author : jarrysix
 * date : 2021/12/02 10:37:45
 * description : 条码服务
 * history :
 */




 syntax = "proto3";
 option go_package = "./;proto";
 option java_package = "com.github.go2o.rpc";

 import "global.proto";

// 校验服务
service CheckService {
    /** 发送会员验证码消息, 并返回验证码, 验证码通过data.code获取 */
    rpc SendCode (SendCheckCodeRequest) returns (SendCheckCodeResponse) {
    }
    /** 比较验证码是否正确 */
    rpc CompareCode (CompareCheckCodeRequest) returns (Result) {
    }
}


// 发送验证码请求
message SendCheckCodeRequest {
    // 令牌 
    string token = 1;
    // 用户类型,1:会员,2:商户
    sint32 userType = 2;
    // 会员编号
    sint64 userId = 3;
    // 接收账号（手机号、邮箱）
    string receptAccount = 4;
    // 操作
    string operation = 5;
    // 发送消息模板编号
    string msgTemplateId = 6;
  }
  
  // 发送验证码响应
  message SendCheckCodeResponse{
    // 错误码
    int32 errCode = 1;
    // 错误消息
    string errMsg = 2;
    // 验证码
    string checkCode = 3;
  }
  
  message CompareCheckCodeRequest {
    sint64 memberId = 1;
    string code = 2;
  }